feat: added image

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Маминова Анна — дизайнер печатных изданий из Санкт-Петербурга" />
+    <meta
+      name="description"
+      content="Маминова Анна — дизайнер печатных изданий из Санкт-Петербурга"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/andrewzhivolup/andrewzhivolup.github.io/refs/heads/main/public/logo512.png"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
