--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/andrewzhivolup/andrewzhivolup.github.io/refs/heads/main/public/logo512.png"
+      content="https://andrewzhivolup.github.io/logo512.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
