fix: changed content

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
       name="description"
       content="Маминова Анна — дизайнер печатных изданий из Санкт-Петербурга"
     />
-    <meta
-      property="og:image"
-      content="https://andrewzhivolup.github.io/logo512.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
